fix sponsor image overflow

--- a/windberg_web/static/css/windberg.css
+++ b/windberg_web/static/css/windberg.css
@@ -105,3 +105,7 @@ table.starttable tbody>tr.topborder>td {
 div.container.content {
     padding-bottom: 20px;
 }
+
+div.sponsors img {
+    max-width: 100%;
+}
